--- a/SqlCeCmd.csproj
+++ b/SqlCeCmd.csproj
@@ -79,6 +79,7 @@
     <Compile Include="CommandLineParser\Util\Validator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SqlCeHelper\Column.cs" />
     <Compile Include="SqlCeHelper\SqlCeCommandHelper.cs" />
     <Compile Include="SqlCeHelper\SqlCeEngineHelper.cs" />
     <Compile Include="SqlCeHelper\SqlCeUtility.cs" />
