--- a/SqlCeCmd40.csproj
+++ b/SqlCeCmd40.csproj
@@ -107,6 +107,7 @@
     <Compile Include="SqlCeHelper\SqlCeCommandHelper.cs" />
     <Compile Include="SqlCeHelper\SqlCeEngineHelper.cs" />
     <Compile Include="SqlCeHelper\SqlCeUtility.cs" />
+    <Compile Include="SqlCeHelper\SqlCommandReader.cs" />
     <Compile Include="Test\SqlCeCmdTest.cs" />
   </ItemGroup>
   <ItemGroup>
