--- a/SqlCeCmd40.csproj
+++ b/SqlCeCmd40.csproj
@@ -113,6 +113,7 @@
   <ItemGroup>
     <Content Include="data_information.ico" />
     <Content Include="lib\nunit.framework.dll" />
+    <Content Include="Test\goscript.sql" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
